# pipecat-basic

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  main.py  pyproject.toml  railway.toml  requirements.txt  server.py  tools.py
